--- a/boards/slwstk6220a/Makefile.include
+++ b/boards/slwstk6220a/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = ezr32wg330f256r60
 
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyACM0
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbmodem* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbmodem* 2> /dev/null | head -n 1)
 
 # setup the boards dependencies
 include $(RIOTBOARD)/$(BOARD)/Makefile.dep
