--- a/boards/arduino-due/Makefile.include
+++ b/boards/arduino-due/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = sam3x8e
 
 # define the default port depending on the host OS
 PORT_LINUX ?= /dev/ttyACM0
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbmodem* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbmodem* 2> /dev/null | head -n 1)
 
 # define board specific flasher options
 export FLASHER = $(RIOTBOARD)/$(BOARD)/dist/flash.sh
