--- a/boards/ek-lm4f120xl/Makefile.include
+++ b/boards/ek-lm4f120xl/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = LM4F120H5QR
 
 #define the default port depending on the host OS
 PORT_LINUX ?= /dev/ttyACM0
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* 2> /dev/null | head -n 1)
 
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
