--- a/boards/fox/Makefile.include
+++ b/boards/fox/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = stm32f103re
 
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyUSB1
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbserial* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbserial* 2> /dev/null | head -n 1)
 
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
