--- a/boards/iotlab-m3/Makefile.include
+++ b/boards/iotlab-m3/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = stm32f103re
 
 # define the default port depending on the host OS
 PORT_LINUX ?= /dev/ttyUSB1
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbserial* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.usbserial* 2> /dev/null | head -n 1)
 
 # setup serial terminal
 export BAUD = 500000
