--- a/boards/msbiot/Makefile.include
+++ b/boards/msbiot/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = stm32f415rg
 
 #define the default port depending on the host OS
 PORT_LINUX ?= /dev/ttyUSB0
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* 2> /dev/null | head -n 1)
 
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
