--- a/boards/pca10005/Makefile.include
+++ b/boards/pca10005/Makefile.include
@@ -4,7 +4,7 @@ export CPU_MODEL = nrf51x22xxaa
 
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyUSB0
-PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* 2> /dev/null | head -n 1)
 
 # define flash and debugging environment
 export FLASHER = $(RIOTBOARD)/$(BOARD)/dist/flash.sh
