--- a/tests/gnrc_border_router_cc112x/Makefile
+++ b/tests/gnrc_border_router_cc112x/Makefile
@@ -1,6 +1,8 @@
 # name of your application
 APPLICATION = gnrc_border_router
 
+USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc112x/include 
+
 # If no BOARD is found in the environment, use this default:
 BOARD ?= samr21-xpro
 
@@ -12,19 +14,8 @@ BOARD_INSUFFICIENT_MEMORY := airfy-beacon msb-430 msb-430h pca10000 pca10005 \
                              stm32f0discovery telosb weio wsn430-v1_3b \
                              wsn430-v1_4 yunjia-nrf51822 z1
 
-ifeq (,$(SLIP_UART))
-  # set default (last available UART)
-  SLIP_UART="UART_DEV(UART_NUMOF-1)"
-endif
-ifeq (,$(SLIP_BAUDRATE))
-  # set default
-  SLIP_BAUDRATE=115200
-endif
-
 GNRC_NETIF_NUMOF := 2
 INCLUDES += -I$(CURDIR)
-CFLAGS += -DSLIP_UART=$(SLIP_UART)
-CFLAGS += -DSLIP_BAUDRATE=$(SLIP_BAUDRATE)
 
 # Include packages that pull up and auto-init the link layer.
 # NOTE: 6LoWPAN will be included if IEEE802.15.4 devices are present
@@ -34,6 +25,13 @@ USEMODULE += auto_init_gnrc_netif
 USEMODULE += gnrc_slip
 # Specify the mandatory networking modules for 6LoWPAN border router
 USEMODULE += gnrc_sixlowpan_border_router_default
+# Specify the mandatory networking modules for IPv6 and UDP
+USEMODULE += gnrc_ipv6_router_default
+USEMODULE += gnrc_udp
+# Add a routing protocol
+USEMODULE += gnrc_rpl
+# This application dumps received packets to STDIO using the pktdump module
+USEMODULE += gnrc_pktdump
 # Add forwarding table
 USEMODULE += fib
 # Additional networking modules that can be dropped if not needed
@@ -42,6 +40,14 @@ USEMODULE += gnrc_icmpv6_echo
 USEMODULE += shell
 USEMODULE += shell_commands
 USEMODULE += ps
+
+ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
+    USEMODULE += cc112x gnrc_netdev2 gnrc_cc112x
+endif
+
+ifneq (,$(filter cc112x,$(USEMODULE)))
+    DISABLE_MODULE += gnrc_sixlowpan_iphc
+endif
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
