--- a/sys/Makefile
+++ b/sys/Makefile
@@ -78,6 +78,9 @@ endif
 ifneq (,$(filter sema,$(USEMODULE)))
     DIRS += sema
 endif
+ifneq (,$(filter mbox,$(USEMODULE)))
+    DIRS += mbox
+endif
 
 DIRS += $(dir $(wildcard $(addsuffix /Makefile, ${USEMODULE})))
 
